crates/exasol-udf-macros/tests/trybuild/dup_entry.stderr
error[E0428]: the name `__exa_run_shim` is defined multiple times
 --> tests/trybuild/dup_entry.rs:11:1
  |
 6 | #[exasol_udf]
   | ------------- previous definition of the value `__exa_run_shim` here
...
11 | #[exasol_udf]
   | ^^^^^^^^^^^^^ `__exa_run_shim` redefined here
   |
   = note: `__exa_run_shim` must be defined only once in the value namespace of this module
   = note: this error originates in the attribute macro `exasol_udf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__exa_destroy_shim` is defined multiple times
 --> tests/trybuild/dup_entry.rs:11:1
  |
 6 | #[exasol_udf]
   | ------------- previous definition of the value `__exa_destroy_shim` here
...
11 | #[exasol_udf]
   | ^^^^^^^^^^^^^ `__exa_destroy_shim` redefined here
   |
   = note: `__exa_destroy_shim` must be defined only once in the value namespace of this module
   = note: this error originates in the attribute macro `exasol_udf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__EXA_VTABLE` is defined multiple times
 --> tests/trybuild/dup_entry.rs:11:1
  |
 6 | #[exasol_udf]
   | ------------- previous definition of the value `__EXA_VTABLE` here
...
11 | #[exasol_udf]
   | ^^^^^^^^^^^^^ `__EXA_VTABLE` redefined here
   |
   = note: `__EXA_VTABLE` must be defined only once in the value namespace of this module
   = note: this error originates in the attribute macro `exasol_udf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__exa_udf_entry` is defined multiple times
 --> tests/trybuild/dup_entry.rs:11:1
  |
 6 | #[exasol_udf]
   | ------------- previous definition of the value `__exa_udf_entry` here
...
11 | #[exasol_udf]
   | ^^^^^^^^^^^^^ `__exa_udf_entry` redefined here
   |
   = note: `__exa_udf_entry` must be defined only once in the value namespace of this module
   = note: this error originates in the attribute macro `exasol_udf` (in Nightly builds, run with -Z macro-backtrace for more info)
